[v9r2-pre7]
use DIRAC v6r20p6

* docs: more doc on TLS
* corrected location
* removed mergeMDF, added mergeHISTOs
* removed unused
* pycodestyle fixes
* autopep8 and style
* avoiding back tick
* autopep8
* removed not-anymore-useful tests
* changed tag
* only gauss
* updated test, removed old MP
* add some components to exclude
* resolve conflicts v9r1p19
* CI: take the devel branch for v0r versions
* BOINC: stricter TLS options

[v9r2-pre6]
use DIRAC v6r20p2

* delete pilot syncronizer, becuase it is in DIRAC
* fix conflicts v9r1p16
* set PYCURL_SSL_LIBRARY
* adding openssl
* corrected location
* handle correctly the case when some parameter is mising
* correct the file path
* resolve v9r1p15 conflicts
* style
* removed MDFmerge
* added debug message
* removed old tests

[v9r2-pre5]
use DIRAC v6r20

[v9r1p20]
use DIRAC v6r19p25

* CI: adapt gitlab-ci.yml to Runner v11

[v9r1p19]
use DIRAC v6r19p24

* returning the error message
* autopep8
* added try/except for incomplete requests
* fix for NoneType
* autopep8
* improve printout
* fix comment
* Docs: fix all the warnings
* better format + new option --Parameters
* protect against exception opening XML summary

[v9r1p18]
use DIRAC v6r19p23

* fix for v6r19p22

[v9r1p17]
use DIRAC v6r19p22

* remove useless code
* protect against no site for SE
* fix printout
* fix variable names
* fix wildcard processing pass if all file types are given

[v9r1p16]
use DIRAC v6r19p21

* added comment
* style
* need to specify fully the branch
* using (correct) tag instead of branch)
* adding openssl and PYCURL_SSL_LIBRARY variable
* change the software deployment URL

[v9r1p15]
use DIRAC v6r19p21

* style
* removing some outdated stuff
* no files to add is not an error
* unused import
* fix logging
* use shell to execute command
* log error in command
* replace os.popen() with subprocess.check_output()
* revert loop on event type and productions
* print -> gLogger and retry BK queries
* a bit of code cleaning