@@ -8,6 +8,13 @@ Sources
 Releases
 {
 
+  v9r2-pre8
+  {
+    Modules = LHCbDIRAC:v9r2-pre8, LHCbWebDIRAC:v4r4p7
+    Depends = DIRAC:v6r20p6
+    LcgVer = v14r2
+  }
+
   v9r2-pre7
   {
     Modules = LHCbDIRAC:v9r2-pre7, LHCbWebDIRAC:v4r4p7
